--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "guzzlehttp/guzzle": "6.3.3"
+        "guzzlehttp/guzzle": "^7.2.3"
     },
     "autoload": {
         "psr-4": {
@@ -23,7 +23,7 @@
         ]
     },
     "require-dev": {
-        "phpunit/phpunit": "^5",
+        "phpunit/phpunit": "^8",
         "mockery/mockery": "dev-master"
     },
     "minimum-stability": "dev"
